[metadata]
name = csv-merger
version = 0.0.1
author = Simon Overell
author_email = simon@human.ai
description = Mergers multiple csv files.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/humanai-repo/csv-merger
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
	csv_merger = csv_merger.csv_merger:main